@@ -1,88 +1,75 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-buildscript {
-    repositories {
-        google()
-        mavenCentral()
-        mavenLocal()
-        maven { url "https://plugins.gradle.org/m2/" }
-        maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
-        maven { url "https://s3.amazonaws.com/repo.commonsware.com" }
-    }
+import org.gradle.api.tasks.Delete
 
-    dependencies {
-        classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.11.0"
-        classpath 'gradle.plugin.org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.10.2'
-    }
+plugins {
+    id 'com.android.application' version '8.6.0' apply false
+    id 'com.android.library' version '8.6.0' apply false
+    id 'io.codearte.nexus-staging' version '0.30.0'
 }
 
-apply plugin: 'java'
-apply plugin: 'build-dashboard'
-apply plugin: 'io.codearte.nexus-staging'
+group = findProperty('GROUP') ?: 'org.smartregister'
+version = findProperty('VERSION_NAME') ?: '0.0.1-SNAPSHOT'
 
-configure(allprojects) { project ->
-
-    version = VERSION_NAME
-    group = GROUP
-
-    buildscript {
-        repositories {
-            google()
-            jcenter()
-            mavenCentral()
-            maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
-            maven { url "https://s3.amazonaws.com/repo.commonsware.com" }
-            mavenLocal()
-        }
-    }
-}
-
-project.ext.preDexLibs = !project.hasProperty('disablePreDex')
-
-subprojects {
-
-    group = 'org.smartregister'
-
-    ext.androidToolsBuildGradle     = '4.0.0'
-    ext.androidBuildToolsVersion    = '29.0.3'
-    ext.androidMinSdkVersion        = 18
-    ext.androidCompileSdkVersion    = 29
-    ext.androidTargetSdkVersion     = 29
-
-    ext.androidAnnotationsVersion = '3.0.1';
-    ext.androidAnnotationsAPIVersion = '3.0.1';
+allprojects {
+    group = rootProject.group
+    version = rootProject.version
 
     repositories {
-        google()
-        jcenter()
-        mavenCentral()
         mavenLocal()
+        google()
+        mavenCentral()
         maven { url 'https://jitpack.io' }
-        maven { url "http://acra.googlecode.com/svn/repository/releases" }
-        maven { url "https://repo.maven.apache.org/maven2" }
-        maven { url "http://cloudant.github.io/cloudant-sync-eap/repository" }
+        maven { url 'https://cloudant.github.io/cloudant-sync-eap/repository' }
+        maven { url 'https://s3.amazonaws.com/repo.commonsware.com' }
+        maven { url 'https://s01.oss.sonatype.org/content/repositories/snapshots/' }
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
-        maven { url "https://s3.amazonaws.com/repo.commonsware.com" }
     }
 
-    // Improve build server performance by allowing disabling of pre-dexing
-    // (see http://tools.android.com/tech-docs/new-build-system/tips#TOC-Improving-Build-Server-performance.)
-    project.plugins.whenPluginAdded { plugin ->
-        if("com.android.build.gradle.AppPlugin".equals(plugin.class.name)) {
-            project.android.dexOptions.preDexLibraries = rootProject.ext.preDexLibs
-        } else if ("com.android.build.gradle.LibraryPlugin".equals(plugin.class.name)) {
-            project.android.dexOptions.preDexLibraries = rootProject.ext.preDexLibs
+    configurations.all { configuration ->
+        configuration.resolutionStrategy {
+            dependencySubstitution {
+                substitute(module('com.github.BlueCodeSystems:opensrp-client-core'))
+                        .using(module('io.github.bluecodesystems:opensrp-client-core:6.2.2'))
+                substitute(module('io.github.bluecodesystems:android-p2p-sync'))
+                        .using(module('com.github.BlueCodeSystems:android-p2p-sync:v0.4.3'))
+            }
+            force 'com.commonsware.cwac:saferoom.x:1.3.0'
         }
+        exclude group: 'com.commonsware.cwac', module: 'saferoom'
     }
 }
 
-buildDashboard {
-    reports.html.setDestination(file("build/"))
+subprojects { subproject ->
+    tasks.withType(Test).configureEach { testTask ->
+        testTask.maxParallelForks = 1
+        testTask.forkEvery = 0
+        testTask.jvmArgs(
+                '--add-opens=java.base/java.lang=ALL-UNNAMED',
+                '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
+                '--add-opens=java.base/java.io=ALL-UNNAMED',
+                '--add-opens=java.base/java.net=ALL-UNNAMED',
+                '--add-opens=java.base/java.util=ALL-UNNAMED',
+                '--add-opens=java.base/java.text=ALL-UNNAMED',
+                '--add-opens=java.base/java.security=ALL-UNNAMED',
+                '--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED',
+                '--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED',
+                '--add-opens=java.base/jdk.internal.util=ALL-UNNAMED',
+                '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
+                '--add-opens=java.base/sun.security.util=ALL-UNNAMED',
+                '--add-opens=java.desktop/java.awt.font=ALL-UNNAMED',
+                '--add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED'
+        )
+    }
+
+    tasks.withType(JavaCompile).configureEach { compileTask ->
+        compileTask.options.fork = true
+        compileTask.options.forkOptions.memoryMaximumSize = '2048m'
+    }
 }
 
-test.reports.html.enabled = false
-test.reports.junitXml.enabled = false
+nexusStaging {
+    serverUrl = 'https://s01.oss.sonatype.org/service/local/'
+}
 
-
-def isReleaseBuild() {
-    return version.contains("SNAPSHOT") == false
+tasks.register('clean', Delete) {
+    delete rootProject.buildDir
 }
